# ZK-insurance-claim-verifier

./: .env.example  .gitignore  .gitmodules  README.md  foundry.toml
app/: README.md  next.config.ts  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ActionButtonList.tsx  ConnectButton.tsx  Header.tsx  InfoList.tsx  InsuranceClaimForm.tsx  LoadingComponents.tsx  OnChainTxButton.tsx
app/src/config/: index.ts
app/src/context/: index.tsx
circuits/: Nargo.toml  Prover.example.toml  Prover.toml  build.sh
circuits/src/: data_types.nr  main.nr  utils.nr
circuits/src/tests/: mod.nr
circuits/src/utils/: converter_field_to_bytes.nr  converter_module.nr
contracts/: HospitalRegistry.sol  InsuranceClaim.sol  InsuranceClaimManager.sol  InsuranceClaimRegistry.sol  ReInsurancePool.sol
contracts/circuit/: InsuranceClaim.sol  InsuranceClaimManager.sol  InsuranceClaimProofVerifier.sol  Starter.sol
contracts/circuit/ultra-verifier/: plonk_vk.sol
contracts/libraries/: DataType.sol  DataTypeConverter.sol  Events.sol
old/contracts/: InsuranceClaim.sol  InsuranceClaimRegistry.sol
scripts/: Verify.s.sol  runningScript_Verify.sh
scripts/base-mainnet/: Verify_onBaseMainnet.s.sol  runningScript_Verify_onBaseMainnet.sh
scripts/base-mainnet/calling-functions/rs/: .env.example  Cargo.toml  README.md
scripts/base-mainnet/calling-functions/rs/ReInsurancePool/: Cargo.toml  README.md  runningScript_ReInsurancePool.sh
scripts/base-mainnet/calling-functions/rs/ReInsurancePool/src/: main.rs
scripts/base-mainnet/calling-functions/rs/artifacts/0901/: ReInsurancePool.json
scripts/base-mainnet/calling-functions/rs/artifacts/0903/ReInsurancePool.sol/: ReInsurancePool.json
scripts/base-mainnet/calling-functions/rs/artifacts/0908/InsuranceClaimManager.sol/: InsuranceClaimManager.json
scripts/base-mainnet/calling-functions/rs/base-mainnet/: reinsurance_pool.rs  runningScript_ReInsurancePool.sh
scripts/base-mainnet/calling-functions/rs/base-mainnet/batch-call/: insurance_claim_manager.rs  reinsurance_pool.rs
scripts/base-mainnet/calling-functions/rs/base-mainnet/single-sc-and-single-sc-address-call/: insurance_claim_manager.rs
scripts/base-mainnet/calling-functions/rs/base-mainnet/single-sc-call/: insurance_claim_manager.rs  reinsurance_pool.rs
scripts/base-mainnet/calling-functions/rs/local-anvil/: runningScript_ReInsurancePool.sh
scripts/base-mainnet/deployment/: DeploymentAllContracts.s.sol  DeploymentForHonkVerifier_basescan.s.sol  DeploymentForInsuranceClaimManager_basescan.s.sol  DeploymentForInsuranceClaimProofVerifier.s.sol  DeploymentForInsuranceClaimProofVerifier_basescan.s.sol  (+9 more)
scripts/base-testnet/: runningScript_Verify_onBaseTestnet.sh
scripts/celo-mainnet/: runningScript_Verify_onBaseMainnet.sh
scripts/celo-mainnet/calling-functions/rs/: .env.example  Cargo.toml  README.md
scripts/celo-mainnet/calling-functions/rs/base-mainnet/batch-call/: runningScript_InsuranceClaimManager.sh
scripts/celo-mainnet/calling-functions/rs/base-mainnet/single-sc-and-single-sc-address-call/: reinsurance_pool.rs
scripts/celo-mainnet/calling-functions/rs/celo-mainnet/batch-call/: insurance_claim_manager.rs  reinsurance_pool.rs  runningScript_InsuranceClaimManager.sh  runningScript_ReInsurancePool.sh
scripts/celo-mainnet/calling-functions/rs/celo-mainnet/single-sc-and-single-sc-address-call/: insurance_claim_manager.rs  reinsurance_pool.rs  runningScript_InsuranceClaimManager.sh
scripts/celo-mainnet/calling-functions/rs/celo-mainnet/single-sc-call/: insurance_claim_manager.rs  reinsurance_pool.rs  runningScript_InsuranceClaimManager.sh  runningScript_ReInsurancePool.sh
scripts/celo-mainnet/calling-functions/rs/local-anvil/batch-call/: reinsurance_pool.rs  runningScript_ReInsurancePool.sh
scripts/swellchain-testnet/: Verify_onSwellChainTestnet.s.sol  runningScript_Verify_onSwellChainTestnet.sh
scripts/utils/: Poseidon2HashComputer.sol  ProofConverter.sol
test/circuit/: InsuranceClaimProofVerifier.t.sol  Starter.t.sol  runningTest_InsuranceClaimProofVerifier.sh
(+58 files in other folders)
