[package]
name = "zk_insurance_claim_verifier"
version = "0.1.0"
edition = "2021"

[[bin]] # For the SC scripts
name = "reinsurance_pool"
path = "local-anvil/reinsurance_pool.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
dotenv = "0.15"
anyhow = "1.0"
alloy = { version = "1.0.27", features = ["full"] }
alloy-contract = "1.0.27"
alloy-provider = "1.0.27"
alloy-signer = "1.0.27"
alloy-signer-local = "1.0.27"
alloy-primitives = "1.0.27"
alloy-rpc-client = "1.0.27"
reqwest = "0.11"

# Separate node bindings dependency
alloy-node-bindings = "1.0"

# For parsing contract artifacts
serde_json = "1.0"